src/objects/DOR_Professional_Code_Mapping__mdt.object
<CustomObject>
    <description>This mapping used by DOL Integration for professional code mapping with program and License type for MUSW__License2__c for DOR Interface.</description>
    <label>DOR Professional Code Mapping</label>
    <pluralLabel>DOR Professional Code Mappings</pluralLabel>
	<fields>
		<fullName>License_Type__c</fullName>
		<label>License Type</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Professional_Code__c</fullName>
		<description>DOR Professional Code</description>
		<label>Professional Code</label>
		<length>10</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Program__c</fullName>
		<description>MUSW__License2__c Program</description>
		<label>Program</label>
		<length>50</length>
		<type>Text</type>
	</fields>
</CustomObject>